--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,8 @@ body{
     margin:0;
     font-family: Arial, Helvetica, sans-serif;
     background-color: #191828;
+    color: white;
+    padding-top: 80px;
 }
 
 
