--- a/css/style.css
+++ b/css/style.css
@@ -42,12 +42,22 @@ body{
 #buttons > div {
     margin: 0 25px;
     font-size: 1.8rem;
+    color: rgba(255, 255, 255, 0.4);
+    padding: 0 2rem;
     text-transform: uppercase;
     display: flex;
     align-items: center;
     justify-content: center;
     height: 95%;
+    box-sizing: content-box;
+    background-color: rgba(255 , 255 , 255 , 0);
+    transition: 0.1s;
+}
+
+#buttons > div:hover {
+    background-color: rgba(255 , 255 , 255 , 0.1);
     border-bottom: #fd264f solid 4px;
+    color: rgba(255, 255, 255, 0.7);
 }
 
 /*footer*/
@@ -69,4 +79,10 @@ body{
     margin: 20px;
     border: 2px white solid;
     border-radius: 6px;
+}
+
+/*buttons*/
+#buttons > .active{
+    border-bottom: #fd264f solid 4px;
+    color: rgba(255, 255, 255, 1);
 }
