--- a/css/style.css
+++ b/css/style.css
@@ -60,6 +60,52 @@ body{
     color: rgba(255, 255, 255, 0.7);
 }
 
+
+/*home*/
+#section-header-home{
+    font-size: 4rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 250px;
+
+}
+
+#section-body{
+    width: 100%;
+    margin-top: 75px;
+    padding: 0 250px;
+    color : rgba(255 , 255 , 255 , 0.4) ;
+}
+
+/*Menu*/
+#menu-head{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 3.5rem;
+    margin-top: 75px;
+    font-weight: bold;
+}
+
+#list{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    margin-top: 75px;
+    color : rgba(255 , 255 , 255 , 0.5) ;
+    font-size: 2rem;
+}
+
+/*about*/
+#section-header{
+    text-align: center;
+    font-size: 2.5rem;
+    font-weight: bold;
+    margin-top: 50px;
+}
+
 /*footer*/
 #footer{
     position: fixed;
@@ -74,10 +120,10 @@ body{
 
 /*line*/
 .line{
-    width: 8px;
+    width: 2px;
     height: 80%;
     margin: 20px;
-    border: 2px white solid;
+    background-color: white;
     border-radius: 6px;
 }
 
