--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,7 @@ body{
 
 #buttons > div:hover {
     background-color: rgba(255 , 255 , 255 , 0.1);
-    border-bottom: #fd264f solid 4px;
+    border-bottom:  rgba(255 , 255 , 255 , 0.5) solid 4px;
     color: rgba(255, 255, 255, 0.7);
 }
 
